--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,24 @@
+
+
 buildscript {
     repositories {
-    	mavenCentral()
+        mavenCentral()
         maven {
-            //url uri('../VillagerGradle/build/maven')
             url uri('https://aitech.ac.jp/maslab/~k14048kk/maven')
-
         }
-
     }
     dependencies {
-        classpath group: 'awvillager', name: 'villagergradle',
-                  version: '0.1-SNAPSHOT'
+        classpath 'awvillager:villagergradle:0.1-SNAPSHOT'
     }
 }
-
 
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'awvillager.gradle'
 
-archivesBaseName = 'awvillager'
 group = 'awvillager'
-version = '0.0.1'
+archivesBaseName = 'awvillager'
+version = '0.1.0'
 
 
 aiwolf {
