--- a/awdk/build.gradle
+++ b/awdk/build.gradle
@@ -22,7 +22,7 @@ version = '1.0.0'
 aiwolf {
 
 	// {AIWolfのバージョン}-{AWVillagerのバージョン}
-	version = '0.4.5-0.0.1';
+	version = '0.4.5_0.1.3-SNAPSHOT';
 
 }
 
