--- a/awdk/build.gradle
+++ b/awdk/build.gradle
@@ -21,8 +21,8 @@ version = '1.0.0'
 //このセクションでは、AIWolfについての設定をします
 aiwolf {
 
-	// {AIWolfのバージョン}-{AWVillagerのバージョン}
-	version = '0.4.5_0.1.3-SNAPSHOT';
+	// {AIWolfのバージョン}_{AWVillagerのバージョン}
+	version = '0.4.6_0.1.3-SNAPSHOT';
 
 }
 
