--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
-
-
 buildscript {
     repositories {
         mavenCentral()
         maven {
-            url uri('https://aitech.ac.jp/maslab/~k14048kk/maven')
+            url uri('https://maslab.aitech.ac.jp/~k14048kk/maven')
         }
     }
     dependencies {
@@ -29,6 +27,16 @@ aiwolf {
 repositories {
     mavenCentral()
     //jcenter()
+
+}
+
+dependencies {
+	// https://mvnrepository.com/artifact/org.reflections/reflections
+	compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+
+	//ログ出力
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8'
 
 }
 
